--- a/index.html
+++ b/index.html
@@ -23,28 +23,24 @@
   <body>
     <header class="header">
       <div class="container header-container">
-        <nav>
-          <div class="nav-container">
-            <!-- logo -->
-            <a class="header-logo link" href="./index.html">
-              Web<span class="header-logo-right">Studio</span>
-            </a>
+        <nav class="nav-container">
+          <!-- logo -->
+          <a class="header-logo link" href="./index.html">
+            Web<span class="header-logo-right">Studio</span>
+          </a>
 
-            <!-- navigation -->
-            <ul class="header-list list">
-              <li class="header-item">
-                <a class="header-link link" href="./index.html">Studio</a>
-              </li>
-              <li class="header-item">
-                <a class="header-link link" href="./portfolio.html"
-                  >Portfolio</a
-                >
-              </li>
-              <li class="header-item">
-                <a class="header-link link" href="">Contacts</a>
-              </li>
-            </ul>
-          </div>
+          <!-- navigation -->
+          <ul class="header-list list">
+            <li class="header-item">
+              <a class="header-link link" href="./index.html">Studio</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="">Contacts</a>
+            </li>
+          </ul>
         </nav>
 
         <!-- contacts -->
@@ -78,77 +74,73 @@
       <!-- section 2 - feature -->
       <section class="feature">
         <div class="container">
-          <div class="feature-container">
-            <h2 class="feature" hidden>Feature</h2>
-            <ul class="feature-list list">
-              <li class="feature-item">
-                <h3 class="feature-item-title paragraph-title">Strategy</h3>
-                <p class="feature-item-text paragraph-text">
-                  Our goal is to identify the business problem to walk away with
-                  the perfect and creative solution.
-                </p>
-              </li>
-              <li class="feature-item">
-                <h3 class="feature-item-title paragraph-title">Punctuality</h3>
-                <p class="feature-item-text paragraph-text">
-                  Bring the key message to the brand's audience for the best
-                  price within the shortest possible time.
-                </p>
-              </li>
-              <li class="feature-item">
-                <h3 class="feature-item-title paragraph-title">Diligence</h3>
-                <p class="feature-item-text paragraph-text">
-                  Research and confirm brands that present the strongest digital
-                  growth opportunities and minimize risk.
-                </p>
-              </li>
-              <li class="feature-item">
-                <h3 class="feature-item-title paragraph-title">Technologies</h3>
-                <p class="feature-item-text paragraph-text">
-                  Design practice focused on digital experiences. We bring forth
-                  a deep passion for problem-solving.
-                </p>
-              </li>
-            </ul>
-          </div>
+          <h2 class="feature" hidden>Feature</h2>
+          <ul class="feature-list list">
+            <li class="feature-item">
+              <h3 class="feature-item-title paragraph-title">Strategy</h3>
+              <p class="feature-item-text paragraph-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="feature-item-title paragraph-title">Punctuality</h3>
+              <p class="feature-item-text paragraph-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="feature-item-title paragraph-title">Diligence</h3>
+              <p class="feature-item-text paragraph-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="feature-item-title paragraph-title">Technologies</h3>
+              <p class="feature-item-text paragraph-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
 
       <!-- section 3 - What are we doing -->
       <section class="doing">
         <div class="container">
-          <div class="doing-container">
-            <h2 class="doing-title section-title">What are we doing</h2>
-            <ul class="doing-list list">
-              <li class="doing-item">
-                <img
-                  src="./images/wawd1.jpg"
-                  alt="What are we doing"
-                  width="360"
-                />
-              </li>
-              <li class="doing-item">
-                <img
-                  src="./images/wawd2.jpg"
-                  alt="What are we doing"
-                  width="360"
-                />
-              </li>
-              <li class="doing-item">
-                <img
-                  src="./images/wawd3.jpg"
-                  alt="What are we doing"
-                  width="360"
-                />
-              </li>
-            </ul>
-          </div>
+          <h2 class="doing-title section-title">What are we doing</h2>
+          <ul class="doing-list list">
+            <li class="doing-item">
+              <img
+                src="./images/wawd1.jpg"
+                alt="What are we doing"
+                width="360"
+              />
+            </li>
+            <li class="doing-item">
+              <img
+                src="./images/wawd2.jpg"
+                alt="What are we doing"
+                width="360"
+              />
+            </li>
+            <li class="doing-item">
+              <img
+                src="./images/wawd3.jpg"
+                alt="What are we doing"
+                width="360"
+              />
+            </li>
+          </ul>
         </div>
       </section>
 
       <!-- section 4 - Our Team -->
       <section class="team">
-        <div class="container team-container">
+        <div class="container">
           <h2 class="team-title section-title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-item">
@@ -197,18 +189,16 @@
     </main>
 
     <footer class="footer">
-      <div class="container footer-container">
-        <div class="footer-block">
-          <!-- logo -->
-          <a class="footer-logo link" href="./index.html">
-            Web<span class="footer-logo-right">Studio</span>
-          </a>
+      <div class="container">
+        <!-- logo -->
+        <a class="footer-logo link" href="./index.html">
+          Web<span class="footer-logo-right">Studio</span>
+        </a>
 
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
   </body>
