--- a/portfolio.html
+++ b/portfolio.html
@@ -23,28 +23,24 @@
   <body>
     <header class="header">
       <div class="container header-container">
-        <nav>
-          <div class="nav-container">
-            <!-- logo -->
-            <a class="header-logo link" href="./index.html">
-              Web<span class="header-logo-right">Studio</span>
-            </a>
+        <nav class="nav-container">
+          <!-- logo -->
+          <a class="header-logo link" href="./index.html">
+            Web<span class="header-logo-right">Studio</span>
+          </a>
 
-            <!-- navigation -->
-            <ul class="header-list list">
-              <li class="header-item">
-                <a class="header-link link" href="./index.html">Studio</a>
-              </li>
-              <li class="header-item">
-                <a class="header-link link" href="./portfolio.html"
-                  >Portfolio</a
-                >
-              </li>
-              <li class="header-item">
-                <a class="header-link link" href="">Contacts</a>
-              </li>
-            </ul>
-          </div>
+          <!-- navigation -->
+          <ul class="header-list list">
+            <li class="header-item">
+              <a class="header-link link" href="./index.html">Studio</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="">Contacts</a>
+            </li>
+          </ul>
         </nav>
 
         <!-- contacts -->
@@ -67,7 +63,7 @@
 
     <main>
       <section class="portfolio">
-        <div class="container portfolio-container">
+        <div class="container">
           <h1 hidden>Portfolio</h1>
 
           <!-- buttons-->
@@ -220,18 +216,16 @@
     </main>
 
     <footer class="footer">
-      <div class="container footer-container">
-        <div class="footer-block">
-          <!-- logo -->
-          <a class="footer-logo link" href="./index.html">
-            Web<span class="footer-logo-right">Studio</span>
-          </a>
+      <div class="container">
+        <!-- logo -->
+        <a class="footer-logo link" href="./index.html">
+          Web<span class="footer-logo-right">Studio</span>
+        </a>
 
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
   </body>
