--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <!-- section 2 - feature -->
       <section class="feature">
         <div class="container">
-          <h2 class="feature visually-hidden">Feature</h2>
+          <h2 class="visually-hidden">Feature</h2>
           <ul class="feature-list list">
             <li class="feature-item">
               <h3 class="feature-item-title paragraph-title">Strategy</h3>
